formato de proyecto

--- a/paginas/catalogos/catalogo_chamacos.html
+++ b/paginas/catalogos/catalogo_chamacos.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/assets/css/docs.css">
     <link rel="stylesheet" href="css/catalogo_chamacos.css">
-    <link rel="icon" href="imagenes/logo-mejorado.png">
+    <link rel="icon" href="../../imagenes/logo-mejorado.png">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <header >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Inicio</a>
+                <a class="navbar-brand" href="../../index.html">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -31,10 +31,10 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sobre-nosotros/sobre_nosotros.html">Sobre Nosotros</a>
+                            <a class="nav-link" href="../sobre-nosotros/sobre_nosotros.html">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contacto/contactanos.html">Contactanos</a>
+                            <a class="nav-link" href="../contacto/contactanos.html">Contactanos</a>
                         </li>
                     </ul>
                 </div>
@@ -56,21 +56,21 @@
     </div>
     <div class="contenedor espacio">
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/img-niños/l2.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/img-niños/l2.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Brillo de Estrellas Suaves<br><br><b>Descripcion:</b>  Esta loción mágica está llena de extractos de manzanilla y aloe vera para calmar y suavizar la piel delicada de tu pequeño.  50ml<br><br><b>Precio:</b> $8.99<br><br>
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/img-niños/l6.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/img-niños/l6.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Aventura en la Jungla Fresca<br><br><b>Descripcion:</b> ¡Prepárate para una aventura emocionante con esta loción refrescante!. 50ml<br><br><b>Precio:</b> $8.99<br><br>
                 <button class="btn btn-dark" style="margin-top: 9%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="imagenes/img-niños/l15.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/img-niños/l15.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Caricias de Nube Encantada<br><br><b>Descripcion:</b>  Experimenta la suavidad celestial con esta loción ligera como una nube.  50ml<br><br><b>Precio:</b> $9.99<br><br>
                 <button class="btn btn-dark" style="margin-top: 9%;" onclick="formulario()">Comprar</button>
@@ -79,21 +79,21 @@
     </div>
     <div class="contenedor espacio">
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/img-niños/l1.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/img-niños/l1.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Dulce Sueño de Unicornio<br><br><b>Descripcion:</b> Transforma la rutina de la hora de dormir en un cuento de hadas con esta loción mágica. 50ml<br><br><b>Precio:</b> 8.99<br><br><br>
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/img-niños/l4.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/img-niños/l4.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Melodía de Mariposas<br><br><b>Descripcion:</b> Déjate envolver por la suavidad de esta loción encantada. 50ml<br><br><b>Precio:</b> $9.99<br><br>
                 <button class="btn btn-dark" style="margin-top: 19%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="imagenes/img-niños/l8.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/img-niños/l8.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Abrazo de Osito Carinoso<br><br><b>Descripcion:</b> Envuelve a tu pequeño en un cálido abrazo con esta loción reconfortante. 50ml<br><br><b>Precio:</b> $7.99<br><br>
                 <button class="btn btn-dark" style="margin-top: 19%;" onclick="formulario()">Comprar</button>
@@ -105,21 +105,21 @@
     </div>
     <div class="contenedor espacio">
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/img-niños/l1.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/img-niños/l1.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Susurro del Bosque<br><br><b>Descripcion:</b> Embárcate en una aventura mágica con esta loción inspirada en la naturaleza. 50ml<br><br><b>Precio:</b> $6.99<br><br><b>Promocion:</b> 3 X 19.99<br><br>
                 <button class="btn btn-dark" style="margin-top: 19%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/img-niños/l4.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/img-niños/l4.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Cuentos de Luna y Estrellas<br><br><b>Descripcion:</b> Deja que la magia del universo abrace la piel de tu pequeño con esta loción celestial. 50ml<br><br><b>Precio:</b> $7.99<br><br><b>Promocion:</b> 3 X 20.99 <br><br>
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="imagenes/img-niños/l8.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/img-niños/l8.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body ">
                 <b>Nombre:</b> Brillito de Luna y Mariposa<br><br><b>Descripcion:</b> Deja que la piel de tu pequeño brille con esta loción mágica. 50ml<br><br><b>Precio:</b> $8.99<br><br><b>Promocion:</b> 3 X 25.99<br><br>
                 <button class="btn btn-dark" style="margin-top: 9%;" onclick="formulario()">Comprar</button>
@@ -129,21 +129,21 @@
     <footer>
         <div class="container d-flex justify-content-between align-items-center footer-container">
             <a href="#" class="logo-empresa">
-                <img id="logo-footer" src="imagenes/logo-empresa.ico" alt="logo-empresa">
+                <img id="logo-footer" src="../../imagenes/logo-empresa.ico" alt="logo-empresa">
             </a>
             <div class="link-column d-flex flex-column">
                 <h4>Empresa</h4>
-                <a href="sobre-nosotros/sobre_nosotros.html#historia" class="hover-link">Nuestra Historia</a>
-                <a href="sobre-nosotros/sobre_nosotros.html#mision" class="hover-link">Misión</a>
-                <a href="sobre-nosotros/sobre_nosotros.html#visionn" class="hover-link">Vision</a>
-                <a href="sobre-nosotros/sobre_nosotros.html#nosotros" class="hover-link">Nosotros</a>
+                <a href="../sobre-nosotros/sobre_nosotros.html#historia" class="hover-link">Nuestra Historia</a>
+                <a href="../sobre-nosotros/sobre_nosotros.html#mision" class="hover-link">Misión</a>
+                <a href="../sobre-nosotros/sobre_nosotros.html#visionn" class="hover-link">Vision</a>
+                <a href="../sobre-nosotros/sobre_nosotros.html#nosotros" class="hover-link">Nosotros</a>
                 <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
             </div>
             <div class="d-flex align-items-center">
-                <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="footer/facebook.png" alt="facebook"></a>
-                <a href="https://www.instagram.com"><img class="footer-img" src="footer/instagran.png" alt="Instagram"></a>
-                <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="footer/x.png" alt="X"></a>
-                <a href="https://web.whatsapp.com"><img class="footer-img" src="footer/whatsapp.png" alt="Whatsapp"></a>
+                <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="../../imagenes/footer/facebook.png" alt="facebook"></a>
+                <a href="https://www.instagram.com"><img class="footer-img" src="../../imagenes/footer/instagran.png" alt="Instagram"></a>
+                <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="../../imagenes/footer/x.png" alt="X"></a>
+                <a href="https://web.whatsapp.com"><img class="footer-img" src="../../imagenes/footer/whatsapp.png" alt="Whatsapp"></a>
             </div>
         </div>
     </footer>
@@ -151,6 +151,6 @@
 </html>
 <script>
     function formulario(){
-        location.href = "formulario/formulario_compra.html"
+        location.href = "../formulario/formulario_compra.html"
     }
 </script>
