--- a/paginas/catalogos/catalogo_mujeres.html
+++ b/paginas/catalogos/catalogo_mujeres.html
@@ -7,14 +7,14 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/assets/css/docs.css">
     <link rel="stylesheet" href="css/catalogo_mujeres.css"> 
-    <link rel="icon" href="imagenes/logo-mejorado.png">
+    <link rel="icon" href="../../imagenes/logo-mejorado.png">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <header > 
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Inicio</a>
+                <a class="navbar-brand" href="../../index.html">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -31,7 +31,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sobre-nosotros/sobre_nosotros.html">Sobre Nosotros</a>
+                            <a class="nav-link" href="../sobre-nosotros/sobre_nosotros.html">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../contacto/contactanos.html">Contactanos</a>
@@ -56,21 +56,21 @@
     </div>
     <div class="contenedor espacio">
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/locion mujeres/locion m4.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion mujeres/locion m4.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Éxtasis de Jazmín Nocturno<br><br><b>Descripcion:</b>  Una fragancia sensual y enigmática que evoca la magia de la noche. Con notas de jazmín, sándalo y ámbar, esta loción despierta los sentidos y seduce con su misteriosa profundidad. 100ml<br><br><b>Precio:</b> $12.99<br><br>
                 <button class="btn btn-dark" style="margin-top: 28%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/locion mujeres/locion m5.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion mujeres/locion m5.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Bruma de Rosas Encantadas<br><br><b>Descripcion:</b> Esta loción captura la esencia de un jardín de rosas en plena floración, con notas suaves y seductoras que envuelven la piel con un aroma romántico y encantador. 50ml<br><br><b>Precio:</b> $9.99<br><br>
                 <button class="btn btn-dark" style="margin-top: 28%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="imagenes/locion mujeres/locion m5.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion mujeres/locion m5.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Melodía de Lavanda Serena<br><br><b>Descripcion:</b>  Una fragancia relajante y tranquilizadora que captura la esencia calmante de la lavanda. Con notas frescas y herbales, esta loción es perfecta para momentos de relajación y bienestar, envolviendo el cuerpo en una melodía de paz y serenidad. 100ml<br><br><b>Precio:</b> $14.99<br><br>
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
@@ -79,21 +79,21 @@
     </div>
     <div class="contenedor ">
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/locion mujeres/locion m7.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion mujeres/locion m7.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Suspiro de Cerezas Rosadas<br><br><b>Descripcion:</b>  Una fragancia dulce y juguetona que evoca la delicadeza de las flores de cerezo en primavera, con notas frescas y afrutadas que inspiran alegría y juventud. 100ml<br><br><b>Precio:</b> $16.99<br><br>
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/locion mujeres/locion m8.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion mujeres/locion m8.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Encanto de Orquídeas<br><br><b>Descripcion:</b> Una fragancia ligera y efervescente que evoca la sensación de libertad y alegría de ver mariposas revolotear en un jardín soleado, con notas frescas y chispeantes que despiertan los sentidos. 100ml<br><br><b>Precio:</b> $14.99<br><br>
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="imagenes/locion mujeres/locion m9.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion mujeres/locion m9.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Rocío de Mariposas Doradas<br><br><b>Descripcion:</b> Una fragancia exótica y seductora que transporta a lugares lejanos y misteriosos, con notas exuberantes y sensuales que envuelven la piel con un aura de misterio y seducción. 50ml<br><br><b>Precio:</b> $8.99<br><br>
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
@@ -106,21 +106,21 @@
     </div>
     <div class="contenedor espacio">
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/locion mujeres/locion m1.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion mujeres/locion m1.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Coco Mademoiselle<br><br><b>Descripcion:</b> Una fragancia clásica y atemporal que encarna la elegancia y el encanto femenino. Con notas de bergamota, rosa y vainilla, esta loción es perfecta para una mujer sofisticada y segura de sí misma. 50ml<br><br><b>Precio:</b> $6.99<br><br><b>Promocion:</b> 3 X $18.99<br><br>Disponible solo del 1 al 30 de mayo<br><br>
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/locion mujeres/locion m2.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion mujeres/locion m2.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Rocío del Amanecer<br><br><b>Descripcion:</b> Con un aroma cítrico y floral, esta loción te hace sentir como un soplo de aire fresco por la mañana, llenándote de vitalidad y optimismo para empezar el día con alegría y determinación. 50ml<br><br><b>Precio:</b> $10.99<br><br><b>Promocion:</b> 3 X $25.99<br><br>Disponible solo del 1 al 30 de mayo<br><br>
                 <button class="btn btn-dark" style="margin-top: 10%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="imagenes/locion mujeres/locion m3.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion mujeres/locion m3.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Aroma de Luna Plateada<br><br><b>Descripcion:</b> Una fragancia mística y enigmática que evoca la magia de la noche bajo la luz plateada de la luna, con notas hipnóticas y fascinantes que invitan a explorar los misterios del universo. 100ml<br><br><b>Precio:</b> $14.99<br><br><b>Promocion:</b> 2 X $24.99<br><br>Disponible solo del 1 al 30 de mayo<br><br>
                 <button class="btn btn-dark" style="margin-top: 10%;" onclick="formulario()">Comprar</button>
@@ -130,21 +130,21 @@
     <footer>
         <div class="container d-flex justify-content-between align-items-center footer-container">
             <a href="#" class="logo-empresa">
-                <img id="logo-footer" src="imagenes/logo-empresa.ico" alt="logo-empresa">
+                <img id="logo-footer" src="../../imagenes/logo-empresa.ico" alt="logo-empresa">
             </a>
             <div class="link-column d-flex flex-column">
                 <h4>Empresa</h4>
-                <a href="sobre-nosotros/sobre_nosotros.html#historia" class="hover-link">Nuestra Historia</a>
-                <a href="sobre-nosotros/sobre_nosotros.html#mision" class="hover-link">Misión</a>
-                <a href="sobre-nosotros/sobre_nosotros.html#visionn" class="hover-link">Vision</a>
-                <a href="sobre-nosotros/sobre_nosotros.html#nosotros" class="hover-link">Nosotros</a>
+                <a href="../sobre-nosotros/sobre_nosotros.html#historia" class="hover-link">Nuestra Historia</a>
+                <a href="../sobre-nosotros/sobre_nosotros.html#mision" class="hover-link">Misión</a>
+                <a href="../sobre-nosotros/sobre_nosotros.html#visionn" class="hover-link">Vision</a>
+                <a href="../sobre-nosotros/sobre_nosotros.html#nosotros" class="hover-link">Nosotros</a>
                 <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
             </div>
             <div class="d-flex align-items-center">
-                <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="footer/facebook.png" alt="facebook"></a>
-                <a href="https://www.instagram.com"><img class="footer-img" src="footer/instagran.png" alt="Instagram"></a>
-                <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="footer/x.png" alt="X"></a>
-                <a href="https://web.whatsapp.com"><img class="footer-img" src="footer/whatsapp.png" alt="Whatsapp"></a>
+                <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="../../imagenes/footer/facebook.png" alt="facebook"></a>
+                <a href="https://www.instagram.com"><img class="footer-img" src="../../imagenes/footer/instagran.png" alt="Instagram"></a>
+                <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="../../imagenes/footer/x.png" alt="X"></a>
+                <a href="https://web.whatsapp.com"><img class="footer-img" src="../../imagenes/footer/whatsapp.png" alt="Whatsapp"></a>
             </div>
         </div>
     </footer>
@@ -152,6 +152,6 @@
 </html>
 <script>
     function formulario(){
-        location.href = "formulario/formulario_compra.html"
+        location.href = "../formulario/formulario_compra.html"
     }
 </script>
