--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>FRAGANCIA T</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/assets/css/docs.css">
-    <link rel="stylesheet" href="css/style.css"> 
+    <link rel="stylesheet" href="paginas/catalogos/css/style.css"> 
     <link rel="icon" href="imagenes/logo-mejorado.png">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </head>
@@ -23,18 +23,18 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Catalogos</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="catalogo_hombre.html">Catalogo de Hombre</a></li>
+                                <li><a class="dropdown-item" href="paginas/catalogos/catalogo_hombre.html">Catalogo de Hombre</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="catalogo_mujeres.html">Catalogo de Mujer</a></li>
+                                <li><a class="dropdown-item" href="paginas/catalogos/catalogo_mujeres.html">Catalogo de Mujer</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="catalogo_chamacos.html">Catalogo de Niño</a></li>
+                                <li><a class="dropdown-item" href="paginas/catalogos/catalogo_chamacos.html">Catalogo de Niño</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sobre-nosotros/sobre_nosotros.html">Sobre Nosotros</a>
+                            <a class="nav-link" href="paginas/sobre-nosotros/sobre_nosotros.html">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contacto/contactanos.html">Contactanos</a>
+                            <a class="nav-link" href="paginas/contacto/contactanos.html">Contactanos</a>
                         </li>
                     </ul>
                 </div>
@@ -58,13 +58,13 @@
     </div>
     <div class="catalogo h3">
         <div class="card" style="width: 18rem; margin-right: 10%;">
-            <a href="catalogo_hombre.html"><h3 class="color-c">Catalogo de Hombres</h3><img src="imagenes/hombre.png" alt="archivo no encontrado"></a>
+            <a href="paginas/catalogos/catalogo_hombre.html"><h3 class="color-c">Catalogo de Hombres</h3><img src="imagenes/hombre.png" alt="archivo no encontrado"></a>
         </div>
         <div class="card h3" style="width: 18rem; margin-right: 10%;">
-            <a href="catalogo_mujeres.html"><h3 class="color-c">Catalogo de Mujeres</h3><img src="imagenes/mujer.png" alt="archivo no encontrado"></a>
+            <a href="paginas/catalogos/catalogo_mujeres.html"><h3 class="color-c">Catalogo de Mujeres</h3><img src="imagenes/mujer.png" alt="archivo no encontrado"></a>
         </div>
         <div class="card h3" style="width: 18rem;">
-            <a href="catalogo_chamacos.html"><h3 class="color-c">Catalogo  de  <br>Niños</h3><img src="imagenes/niño.png" alt="archivo no encontrado"></a>
+            <a href="paginas/catalogos/catalogo_chamacos.html"><h3 class="color-c">Catalogo  de  <br>Niños</h3><img src="imagenes/niño.png" alt="archivo no encontrado"></a>
         </div>
     </div>
 
@@ -139,10 +139,10 @@
                 <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
             </div>
             <div class="d-flex align-items-center">
-                <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="footer/facebook.png" alt="facebook"></a>
-                <a href="https://www.instagram.com"><img class="footer-img" src="footer/instagran.png" alt="Instagram"></a>
-                <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="footer/x.png" alt="X"></a>
-                <a href="https://web.whatsapp.com"><img class="footer-img" src="footer/whatsapp.png" alt="Whatsapp"></a>
+                <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="imagenes/footer/facebook.png" alt="facebook"></a>
+                <a href="https://www.instagram.com"><img class="footer-img" src="imagenes/footer/instagran.png" alt="Instagram"></a>
+                <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="imagenes/footer/x.png" alt="X"></a>
+                <a href="https://web.whatsapp.com"><img class="footer-img" src="imagenes/footer/whatsapp.png" alt="Whatsapp"></a>
             </div>
         </div>
     </footer>
@@ -150,6 +150,6 @@
 </html>
 <script>
     function formulario(){
-        location.href = "formulario/formulario_compra.html"
+        location.href = "paginas/formulario/formulario_compra.html"
     }
 </script>
