--- a/paginas/catalogos/catalogo_hombre.html
+++ b/paginas/catalogos/catalogo_hombre.html
@@ -6,7 +6,7 @@
     <title>Catalago de Hombres</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/assets/css/docs.css"> 
-    <link rel="icon" href="imagenes/logo-mejorado.png">
+    <link rel="icon" href="../../imagenes/logo-mejorado.png">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" href="css/catalogo_hombre.css">
 </head>
@@ -14,7 +14,7 @@
     <header >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="index.html">Inicio</a>
+                <a class="navbar-brand" href="../../index.html">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -31,10 +31,10 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="sobre-nosotros/sobre_nosotros.html">Sobre Nosotros</a>
+                            <a class="nav-link" href="../sobre-nosotros/sobre_nosotros.html">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contacto/contactanos.html">Contactanos</a>
+                            <a class="nav-link" href="../contacto/contactanos.html">Contactanos</a>
                         </li>
                     </ul>
                 </div>
@@ -56,21 +56,21 @@
     </div>
     <div class="contenedor espacio">
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/locion hombres/losion5.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion hombres/losion5.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Armonía Silvestre<br><br><b>Descripcion:</b> Una fragancia natural y reconfortante que te transporta a un bosque encantado, donde la vida fluye en perfecta armonía. 100ml<br><br><b>Precio:</b> $12.99<br><br>
                 <button class="btn btn-dark" style="margin-top: 9%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/locion hombres/losion6.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion hombres/losion6.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Esencia del Bosque<br><br><b>Descripcion:</b> Una loción que captura la esencia misma del bosque, con sus aromas frescos y terrosos que te transportan a un mundo de naturaleza salvaje y misteriosa. 50ml<br><br><b>Precio:</b> $9.99<br><br>
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="imagenes/locion hombres/losion8.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion hombres/losion8.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Aliento del Océano<br><br><b>Descripcion:</b> Una fragancia refrescante y vigorizante que te sumerge en las profundidades del mar. 100ml<br><br><b>Precio:</b> $14.99<br><br>
                 <button class="btn btn-dark" style="margin-top: 18%;" onclick="formulario()">Comprar</button>
@@ -79,21 +79,21 @@
     </div>
     <div class="contenedor espacio">
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/locion hombres/losion9.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion hombres/losion9.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Canto de las Montañas<br><br><b>Descripcion:</b> Una loción que evoca la majestuosidad y serenidad de las montañas, con sus aromas frescos y herbáceos que te transportan a lo alto de las cumbres nevadas. 100ml<br><br><b>Precio:</b> $16.99<br><br>
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/locion hombres/losion10.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion hombres/losion10.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Aura de Cielo<br><br><b>Descripcion:</b> Una fragancia etérea y celestial que te envuelve en la suavidad y luminosidad del cielo. 50ml<br><br><b>Precio:</b> $8.99<br><br>
                 <button class="btn btn-dark" style="margin-top: 10%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="imagenes/locion hombres/losion11.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion hombres/losion11.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Serenata Nocturna<br><br><b>Descripcion:</b> Una loción romántica y seductora que te transporta a una noche de ensueño, donde las estrellas brillan en el cielo y la luna ilumina tu camino. 50ml<br><br><b>Precio:</b> $8.99<br><br>
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
@@ -107,21 +107,21 @@
     </div>
     <div class="contenedor espacio">
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/locion hombres/losion1.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion hombres/losion1.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Bruma de Ensueño<br><br><b>Descripcion:</b> Una fragancia misteriosa y envolvente que evoca la sensación de estar inmerso en un sueño encantado. 100ml<br><br><b>Precio:</b> $12.99<br><br><b>Promocion:</b> 3 X $30.99<br><br>
                 <button class="btn btn-dark" style="margin-top: 29%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem; margin-right: 8%;">
-            <img src="imagenes/locion hombres/losion3.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion hombres/losion3.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Fragancia de Luna<br><br><b>Descripcion:</b> Una loción celestial que captura la magia de la noche y la suavidad de la luz lunar. 50ml<br><br><b>Precio:</b> $10.99<br><br><b>Promocion:</b> 3 X $25.99<br><br>
                 <button class="btn btn-dark" style="margin-top: 38%;" onclick="formulario()">Comprar</button>
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="imagenes/locion hombres/losion4.png" class="card-img-top" alt="archivo no encontrado">
+            <img src="../../imagenes/locion hombres/losion4.png" class="card-img-top" alt="archivo no encontrado">
             <div class="card-body">
                 <b>Nombre:</b> Rocío del Amanecer<br><br><b>Descripcion:</b> Con un aroma cítrico y floral, esta loción te hace sentir como un soplo de aire fresco por la mañana, llenándote de vitalidad y optimismo para empezar el día con alegría y determinación. 100ml<br><br><b>Precio:</b> $14.99<br><br><b>Promocion:</b> Locion + Frasco X $24.99<br><br>
                 <button class="btn btn-dark" onclick="formulario()">Comprar</button>
@@ -131,21 +131,21 @@
     <footer>
         <div class="container d-flex justify-content-between align-items-center footer-container">
             <a href="#" class="logo-empresa">
-                <img id="logo-footer" src="imagenes/logo-empresa.ico" alt="logo-empresa">
+                <img id="logo-footer" src="../../imagenes/logo-empresa.ico" alt="logo-empresa">
             </a>
             <div class="link-column d-flex flex-column">
                 <h4>Empresa</h4>
-                <a href="sobre-nosotros/sobre_nosotros.html#historia" class="hover-link">Nuestra Historia</a>
-                <a href="sobre-nosotros/sobre_nosotros.html#mision" class="hover-link">Misión</a>
-                <a href="sobre-nosotros/sobre_nosotros.html#visionn" class="hover-link">Vision</a>
-                <a href="sobre-nosotros/sobre_nosotros.html#nosotros" class="hover-link">Nosotros</a>
+                <a href="../sobre-nosotros/sobre_nosotros.html#historia" class="hover-link">Nuestra Historia</a>
+                <a href="../sobre-nosotros/sobre_nosotros.html#mision" class="hover-link">Misión</a>
+                <a href="../sobre-nosotros/sobre_nosotros.html#visionn" class="hover-link">Vision</a>
+                <a href="../sobre-nosotros/sobre_nosotros.html#nosotros" class="hover-link">Nosotros</a>
                 <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
             </div>
             <div class="d-flex align-items-center">
-                <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="footer/facebook.png" alt="facebook"></a>
-                <a href="https://www.instagram.com"><img class="footer-img" src="footer/instagran.png" alt="Instagram"></a>
-                <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="footer/x.png" alt="X"></a>
-                <a href="https://web.whatsapp.com"><img class="footer-img" src="footer/whatsapp.png" alt="Whatsapp"></a>
+                <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="../../imagenes/footer/facebook.png" alt="facebook"></a>
+                <a href="https://www.instagram.com"><img class="footer-img" src="../../imagenes/footer/instagran.png" alt="Instagram"></a>
+                <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="../../imagenes/footer/x.png" alt="X"></a>
+                <a href="https://web.whatsapp.com"><img class="footer-img" src="../../imagenes/footer/whatsapp.png" alt="Whatsapp"></a>
             </div>
         </div>
     </footer>
@@ -153,6 +153,6 @@
 </html>
 <script>
     function formulario(){
-        location.href = "formulario/formulario_compra.html"
+        location.href = "../formulario/formulario_compra.html"
     }
 </script>
