--- a/paginas/sobre-nosotros/sobre_nosotros.html
+++ b/paginas/sobre-nosotros/sobre_nosotros.html
@@ -8,7 +8,7 @@
     <link rel="icon" href="imagenes/logo-mejorado.png">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://getbootstrap.com/docs/5.3/assets/css/docs.css">
-    <link rel="icon" href="../imagenes/logo-mejorado.png">
+    <link rel="icon" href="../../imagenes/logo-mejorado.png">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
@@ -17,7 +17,7 @@
     <header >
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
-                <a class="navbar-brand" href="../index.html">Inicio</a>
+                <a class="navbar-brand" href="../../index.html">Inicio</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
@@ -34,7 +34,7 @@
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../sobre-nosotros/sobre_nosotros.html">Sobre Nosotros</a>
+                            <a class="nav-link" href="sobre_nosotros.html">Sobre Nosotros</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="../contacto/contactanos.html">Contactanos</a>
@@ -128,7 +128,7 @@
     <footer>
         <div class="container d-flex justify-content-between align-items-center footer-container">
             <a href="#" class="logo-empresa">
-                <img id="logo-footer" src="../imagenes/logo-empresa.ico" alt="logo-empresa">
+                <img id="logo-footer" src="../../imagenes/logo-empresa.ico" alt="logo-empresa">
             </a>
             <div class="link-column d-flex flex-column">
                 <h4>Empresa</h4>
@@ -139,10 +139,10 @@
                 <p>&copy; 2024 FraganciaT. Todos los derechos reservados</p>
             </div>
             <div class="d-flex align-items-center">
-                <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="../footer/facebook.png" alt="facebook"></a>
-                <a href="https://www.instagram.com"><img class="footer-img" src="../footer/instagran.png" alt="Instagram"></a>
-                <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="../footer/x.png" alt="X"></a>
-                <a href="https://web.whatsapp.com"><img class="footer-img" src="../footer/whatsapp.png" alt="Whatsapp"></a>
+                <a href="https://www.facebook.com/?locale=es_LA"><img class="footer-img" src="../../imagenes/footer/facebook.png" alt="facebook"></a>
+                <a href="https://www.instagram.com"><img class="footer-img" src="../../imagenes/footer/instagran.png" alt="Instagram"></a>
+                <a href="https://x.com/?lang=es&mx=2"><img class="footer-img" src="../../imagenes/footer/x.png" alt="X"></a>
+                <a href="https://web.whatsapp.com"><img class="footer-img" src="../../imagenes/footer/whatsapp.png" alt="Whatsapp"></a>
             </div>
         </div>
     </footer>
