--- a/paginas/sobre-nosotros/sobre_nosotros.html
+++ b/paginas/sobre-nosotros/sobre_nosotros.html
@@ -26,11 +26,11 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">Catalogos</a>
                             <ul class="dropdown-menu">
-                                <li><a class="dropdown-item" href="../catalogo_hombre.html">Catalogo de Hombre</a></li>
+                                <li><a class="dropdown-item" href="../catalogos/catalogo_hombre.html">Catalogo de Hombre</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="../catalogo_mujeres.html">Catalogo de Mujer</a></li>
+                                <li><a class="dropdown-item" href="../catalogos/catalogo_mujeres.html">Catalogo de Mujer</a></li>
                                 <li><hr class="dropdown-divider"></li>
-                                <li><a class="dropdown-item" href="../catalogo_chamacos.html">Catalogo de Niño</a></li>
+                                <li><a class="dropdown-item" href="../catalogos/catalogo_chamacos.html">Catalogo de Niño</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
